@@ -420,7 +420,7 @@ namespace Susy
 
       // Event Flag to check for LAr, bad jet, etc. List found in SusyDefs.h under EventCheck
       // This will be replaced
-      //int evtFlag[NtSys_N];
+      int evtFlag[NtSys_N];
 
       // Event cleaning cut flags. The bits are defined in SusyDefs as EventCleaningCuts
       unsigned int cutFlags[NtSys_N];
@@ -458,14 +458,14 @@ namespace Susy
         hfor = -1;
 	susyFinalState = -1;
         passMllForAlpgen = true;
-	//memset(evtFlag,0,sizeof(evtFlag));
+	memset(evtFlag,0,sizeof(evtFlag));
 	memset(cutFlags,0,sizeof(cutFlags));
         wPileup = wPileupAB3 = wPileupAB = 0;
         xsec = lumiSF = sumw = pdfSF = 0;
 	pdf_id1 = pdf_id2 = pdf_x1 = pdf_x2 = pdf_scale = 0;
       }
 
-      ClassDef(Event, 19);
+      ClassDef(Event, 20);
   };
 
 };
